--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>karina gallery</title>
+    <style>
+      #root {
+        width: 100vw; /* 뷰포트의 너비와 같게 설정 */
+        height: 100vh; /* 뷰포트의 높이와 같게 설정 */
+      }
+    </style>
     <script src="./index.bundle.js" defer></script>
   </head>
   <body>
