--- a/src/public/index.html
+++ b/src/public/index.html
@@ -7,8 +7,8 @@
     <title>karina gallery</title>
     <style>
       #root {
-        width: 100vw; /* 뷰포트의 너비와 같게 설정 */
-        height: 100vh; /* 뷰포트의 높이와 같게 설정 */
+        width: 100vw;
+        height: 100vh;
       }
     </style>
     <script src="./index.bundle.js" defer></script>
