JWT -Header, Payload, Signature

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -11,7 +11,7 @@
         height: 100vh;
       }
     </style>
-    <script src="./index.bundle.js" defer></script>
+    <script src="/index.bundle.js" defer></script>
   </head>
   <body>
     <div id="root"></div>
